--- a/Pac-Man_index.html
+++ b/Pac-Man_index.html
@@ -7,20 +7,66 @@
       <script src="./Pac-Man_script.js"></script>
    </head>
    <body>
-      <h1>Pac-Man</h1>
-      <img id="Pac-Man" class="Pac-Man" src="./Images/Pac-Man_Open_Right.png" width="100" height="100" style="position: absolute;"></img>
-      <button type="button" class="button" onmousedown="Increase_Velocity(10)">Increase Velocity</button>
+      <h1 class="header">Pac-Man</h1>
+      <img id="Pac-Man" class="Pac-Man" src="./Images/Pac-Man_Open_Right.png" width="100" height="100" style="position: absolute; top: 33%;"></img>
+      <button type="button" class="button1" onmousedown="Increase_Velocity(10)">Increase Velocity</button>
       <br>
+      <button type="button" class="button2" onmousedown="Decrease_Velocity(10)">Decrease Velocity</button>
       <br>
-      <button type="button" class="button" onmousedown="Decrease_Velocity(10)">Decrease Velocity</button>
+      <button type="button" class="button3" onmousedown="Stop()">Stop</button>
       <br>
+      <button type="button" class="button4" onmousedown="Change_Velocity()">Change Velocity</button>
       <br>
-      <button type="button" class="button" onmousedown="Stop()">Stop</button>
-      <br>
-      <br>
-      <button type="button" class="button" onmousedown="Change_Velocity()">Change Velocity</button>
-      <br>
-      <br>
-      <button type="button" class="button" onmousedown="Change_View()">Change View</button>
+      <button type="button" class="button5" onmousedown="Change_View()">Change View</button>
+      <style>
+         .header {
+            text-align: center;
+         }
+         .button1 {
+            z-index: 2;
+            text-align: center;
+            font-size: 16px;
+            margin-left: 40%;
+            margin-top: 0px;
+            width: 20%;
+            color: black;
+         }
+         .button2 {
+            z-index: 2;
+            text-align: center;
+            font-size: 16px;
+            margin-left: 40%;
+            margin-top: 0px;
+            width: 20%;
+            color: black;
+         }
+         .button3 {
+            z-index: 2;
+            text-align: center;
+            font-size: 16px;
+            margin-left: 40%;
+            margin-top: 0px;
+            width: 20%;
+            color: black;
+         }
+         .button4 {
+            z-index: 2;
+            text-align: center;
+            font-size: 16px;
+            margin-left: 40%;
+            margin-top: 0px;
+            width: 20%;
+            color: black;
+         }
+         .button5 {
+            z-index: 2;
+            text-align: center;
+            font-size: 16px;
+            margin-left: 40%;
+            margin-top: 0px;
+            width: 20%;
+            color: black;
+         }
+      </style>
    </body>
 </html>
