--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
    <body>
       <h1 class="header">Pac-Man</h1>
       <img id="Pac-Man" class="Pac-Man" src="./Images/Pac-Man_Open_Right.png" width="100" height="100" style="position: absolute; top: 33%;"></img>
-      <button type="button" class="button1" onmousedown="Increase_Velocity(10)">Increase Velocity</button>
+      <button type="button" class="button1" onmousedown="Increase_Velocity(10)">Increase Speed</button>
       <br>
-      <button type="button" class="button2" onmousedown="Decrease_Velocity(10)">Decrease Velocity</button>
+      <button type="button" class="button2" onmousedown="Decrease_Velocity(10)">Decrease Speed</button>
       <br>
       <button type="button" class="button3" onmousedown="Stop()">Stop</button>
       <br>
-      <button type="button" class="button4" onmousedown="Change_Velocity()">Change Velocity</button>
+      <button type="button" class="button4" onmousedown="Change_Velocity()">Change Direction</button>
       <br>
       <button type="button" class="button5" onmousedown="Change_View()">Change View</button>
       <style>
