Updated Referenced Files

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <title>Pac-Man</title>
-      <!--<link rel="stylesheet" href="Pac-Man_style.css">-->
-      <script src="./Pac-Man_script.js"></script>
+      <!--<link rel="stylesheet" href="style.css">-->
+      <script src="./script.js"></script>
    </head>
    <body>
       <h1 class="header">Pac-Man</h1>
