--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <title>Pac-Man</title>
-      <!--<link rel="stylesheet" href="style.css">-->
+      <link rel="stylesheet" href="style.css">
       <script src="./script.js"></script>
    </head>
    <body>
@@ -18,55 +18,5 @@
       <button type="button" class="button4" onmousedown="Change_Velocity()">Change Direction</button>
       <br>
       <button type="button" class="button5" onmousedown="Change_View()">Change View</button>
-      <style>
-         .header {
-            text-align: center;
-         }
-         .button1 {
-            z-index: 2;
-            text-align: center;
-            font-size: 16px;
-            margin-left: 40%;
-            margin-top: 0px;
-            width: 20%;
-            color: black;
-         }
-         .button2 {
-            z-index: 2;
-            text-align: center;
-            font-size: 16px;
-            margin-left: 40%;
-            margin-top: 0px;
-            width: 20%;
-            color: black;
-         }
-         .button3 {
-            z-index: 2;
-            text-align: center;
-            font-size: 16px;
-            margin-left: 40%;
-            margin-top: 0px;
-            width: 20%;
-            color: black;
-         }
-         .button4 {
-            z-index: 2;
-            text-align: center;
-            font-size: 16px;
-            margin-left: 40%;
-            margin-top: 0px;
-            width: 20%;
-            color: black;
-         }
-         .button5 {
-            z-index: 2;
-            text-align: center;
-            font-size: 16px;
-            margin-left: 40%;
-            margin-top: 0px;
-            width: 20%;
-            color: black;
-         }
-      </style>
    </body>
 </html>
