--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang='en'>
    <head>
       <meta charset="UTF-8">
-      <title>Pac-Man</title>
-      <link rel="stylesheet" href="style.css">
-      <script src="./script.js"></script>
+      <title>Pac-Man Project</title>
+      <link rel="stylesheet" href="styles.css">
    </head>
    <body>
       <h1 class="header">Pac-Man</h1>
@@ -18,5 +17,6 @@
       <button type="button" class="button4" onmousedown="Change_Velocity()">Change Direction</button>
       <br>
       <button type="button" class="button5" onmousedown="Change_View()">Change View</button>
+      <script src="./script.js"></script>
    </body>
 </html>
